# app/models/caregiver.rb
@@ -1,0 +1,3 @@
+class Caregiver < ApplicationRecord
+  validates :name, presence: true
+end
