# config/routes.rb
@@ -5,8 +5,9 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       resources :clients do
-      	resources :dogs
+        resources :dogs
       end
+      resources :caregivers
     end
   end
 end
