# swagger/v1/swagger.json
@@ -22,9 +22,219 @@
           "example": "Rufuss"
         }
       }
+    },
+    "caregiver": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Matheus"
+        }
+      }
     }
   },
   "paths": {
+    "/api/v1/caregivers": {
+      "get": {
+        "responses": {
+          "200": {
+            "examples": {
+              "application/json": [
+                {
+                  "id": 4,
+                  "name": "Caregiver name 4",
+                  "created_at": "2019-07-02T04:18:31.300Z",
+                  "updated_at": "2019-07-02T04:18:31.300Z"
+                },
+                {
+                  "id": 5,
+                  "name": "Caregiver name 5",
+                  "created_at": "2019-07-02T04:18:31.301Z",
+                  "updated_at": "2019-07-02T04:18:31.301Z"
+                },
+                {
+                  "id": 6,
+                  "name": "Caregiver name 6",
+                  "created_at": "2019-07-02T04:18:31.303Z",
+                  "updated_at": "2019-07-02T04:18:31.303Z"
+                }
+              ]
+            },
+            "description": "Return all the available caregivers"
+          }
+        },
+        "tags": [
+          "caregivers"
+        ],
+        "summary": "Get caregivers",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ]
+      },
+      "post": {
+        "responses": {
+          "201": {
+            "examples": {
+              "application/json": {
+                "id": 7,
+                "name": "Eduardo",
+                "created_at": "2019-07-02T04:18:31.313Z",
+                "updated_at": "2019-07-02T04:18:31.313Z"
+              }
+            },
+            "description": "Caregiver created"
+          }
+        },
+        "parameters": [
+          {
+            "name": "caregiver",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/caregiver"
+            }
+          }
+        ],
+        "tags": [
+          "caregivers"
+        ],
+        "summary": "Create a new caregiver",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ]
+      }
+    },
+    "/api/v1/caregivers/{id}": {
+      "get": {
+        "responses": {
+          "200": {
+            "examples": {
+              "application/json": {
+                "id": 8,
+                "name": "Caregiver name 7",
+                "created_at": "2019-07-02T04:18:31.320Z",
+                "updated_at": "2019-07-02T04:18:31.320Z"
+              }
+            },
+            "description": "Return the selected Caregiver"
+          },
+          "404": {
+            "examples": {
+              "text/plain": " "
+            },
+            "description": "Caregiver not found"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true,
+            "description": "caregiver ID"
+          }
+        ],
+        "tags": [
+          "caregivers"
+        ],
+        "summary": "Get Caregiver",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ]
+      },
+      "put": {
+        "responses": {
+          "200": {
+            "examples": {
+              "application/json": {
+                "id": 9,
+                "name": "New Name",
+                "created_at": "2019-07-02T04:18:31.351Z",
+                "updated_at": "2019-07-02T04:18:31.356Z"
+              }
+            },
+            "description": "Caregiver updated"
+          },
+          "404": {
+            "examples": {
+              "text/plain": " "
+            },
+            "description": "Caregiver not found"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true,
+            "description": "caregiver ID"
+          },
+          {
+            "name": "caregiver",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/caregiver"
+            }
+          }
+        ],
+        "tags": [
+          "caregivers"
+        ],
+        "summary": "Update Caregiver",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ]
+      },
+      "delete": {
+        "responses": {
+          "204": {
+            "examples": {
+              "": ""
+            },
+            "description": "Caregiver deleted"
+          },
+          "404": {
+            "examples": {
+              "text/plain": " "
+            },
+            "description": "Caregiver not found"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true,
+            "description": "caregiver ID"
+          }
+        ],
+        "tags": [
+          "caregivers"
+        ],
+        "summary": "Delete Caregiver",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ]
+      }
+    },
     "/api/v1/clients": {
       "get": {
         "responses": {
@@ -34,20 +244,20 @@
                 {
                   "id": 4,
                   "name": "John Doe 4",
-                  "created_at": "2019-07-02T02:35:27.374Z",
-                  "updated_at": "2019-07-02T02:35:27.374Z"
+                  "created_at": "2019-07-02T04:18:31.417Z",
+                  "updated_at": "2019-07-02T04:18:31.417Z"
                 },
                 {
                   "id": 5,
                   "name": "John Doe 5",
-                  "created_at": "2019-07-02T02:35:27.376Z",
-                  "updated_at": "2019-07-02T02:35:27.376Z"
+                  "created_at": "2019-07-02T04:18:31.420Z",
+                  "updated_at": "2019-07-02T04:18:31.420Z"
                 },
                 {
                   "id": 6,
                   "name": "John Doe 6",
-                  "created_at": "2019-07-02T02:35:27.378Z",
-                  "updated_at": "2019-07-02T02:35:27.378Z"
+                  "created_at": "2019-07-02T04:18:31.421Z",
+                  "updated_at": "2019-07-02T04:18:31.421Z"
                 }
               ]
             },
@@ -72,8 +282,8 @@
               "application/json": {
                 "id": 7,
                 "name": "Eduardo",
-                "created_at": "2019-07-02T02:35:27.388Z",
-                "updated_at": "2019-07-02T02:35:27.388Z"
+                "created_at": "2019-07-02T04:18:31.435Z",
+                "updated_at": "2019-07-02T04:18:31.435Z"
               }
             },
             "description": "Client created"
@@ -109,8 +319,8 @@
               "application/json": {
                 "id": 8,
                 "name": "John Doe 7",
-                "created_at": "2019-07-02T02:35:27.396Z",
-                "updated_at": "2019-07-02T02:35:27.396Z"
+                "created_at": "2019-07-02T04:18:31.441Z",
+                "updated_at": "2019-07-02T04:18:31.441Z"
               }
             },
             "description": "Return the selected Client"
@@ -149,8 +359,8 @@
               "application/json": {
                 "id": 9,
                 "name": "New Name",
-                "created_at": "2019-07-02T02:35:27.421Z",
-                "updated_at": "2019-07-02T02:35:27.424Z"
+                "created_at": "2019-07-02T04:18:31.462Z",
+                "updated_at": "2019-07-02T04:18:31.469Z"
               }
             },
             "description": "Client updated"
@@ -245,22 +455,22 @@
                   "id": 4,
                   "name": "My Dog 4",
                   "client_id": 12,
-                  "created_at": "2019-07-02T02:35:27.516Z",
-                  "updated_at": "2019-07-02T02:35:27.516Z"
+                  "created_at": "2019-07-02T04:18:31.568Z",
+                  "updated_at": "2019-07-02T04:18:31.568Z"
                 },
                 {
                   "id": 5,
                   "name": "My Dog 5",
                   "client_id": 12,
-                  "created_at": "2019-07-02T02:35:27.518Z",
-                  "updated_at": "2019-07-02T02:35:27.518Z"
+                  "created_at": "2019-07-02T04:18:31.571Z",
+                  "updated_at": "2019-07-02T04:18:31.571Z"
                 },
                 {
                   "id": 6,
                   "name": "My Dog 6",
                   "client_id": 12,
-                  "created_at": "2019-07-02T02:35:27.520Z",
-                  "updated_at": "2019-07-02T02:35:27.520Z"
+                  "created_at": "2019-07-02T04:18:31.572Z",
+                  "updated_at": "2019-07-02T04:18:31.572Z"
                 }
               ]
             },
@@ -286,8 +496,8 @@
                 "id": 7,
                 "name": "Rufus",
                 "client_id": 13,
-                "created_at": "2019-07-02T02:35:27.536Z",
-                "updated_at": "2019-07-02T02:35:27.536Z"
+                "created_at": "2019-07-02T04:18:31.588Z",
+                "updated_at": "2019-07-02T04:18:31.588Z"
               }
             },
             "description": "Client created"
@@ -333,8 +543,8 @@
                 "id": 8,
                 "name": "My Dog 7",
                 "client_id": 14,
-                "created_at": "2019-07-02T02:35:27.547Z",
-                "updated_at": "2019-07-02T02:35:27.547Z"
+                "created_at": "2019-07-02T04:18:31.598Z",
+                "updated_at": "2019-07-02T04:18:31.598Z"
               }
             },
             "description": "Return the selected Dog"
@@ -368,8 +578,8 @@
                 "client_id": 15,
                 "id": 9,
                 "name": "New Name",
-                "created_at": "2019-07-02T02:35:27.565Z",
-                "updated_at": "2019-07-02T02:35:27.571Z"
+                "created_at": "2019-07-02T04:18:31.618Z",
+                "updated_at": "2019-07-02T04:18:31.625Z"
               }
             },
             "description": "Client updated"
@@ -382,6 +592,13 @@
           }
         },
         "parameters": [
+          {
+            "name": "client_id",
+            "in": "path",
+            "type": "integer",
+            "required": true,
+            "description": "client ID"
+          },
           {
             "name": "id",
             "in": "path",
